# VoxCPM.cpp

./: CMakeLists.txt  README.cuda.md  README.md  README_zh.md
include/voxcpm/: minicpm.h  server_common.h  voxcpm.h
servers/: voxcpm_server.cpp
src/: minicpm.cpp  quantize.cpp  server_common.cpp  voxcpm.cpp  weight-store.cpp
tests/: test_quantize.cpp
